--- a/src/app/applicant-list/applicant-list.component.sass
+++ b/src/app/applicant-list/applicant-list.component.sass
@@ -1,6 +1,9 @@
-table 
-    margin-top: 1.5em
+td, th 
+    border: 1px solid #999
+    padding: .7rem
 
-
-tbody td 
-    text-align: right
+tr 
+    text-align: center
+    border-collapse: separate
+    border-spacing: 0 7px
+    
