--- a/src/styles.sass
+++ b/src/styles.sass
@@ -1,1 +1,53 @@
+@use 'base'
+    
 @import '~bootstrap/dist/css/bootstrap.min.css'
+
+@import "./base.sass"
+
+
+html, body, #pagecontainer
+    width: 100%
+    height: 100%
+
+#pagecontainer
+    font: 100% $Oswald
+    background-color: $color1
+    color: $color5
+    display: grid
+    grid-template-rows: repeat(20, 5%)
+    grid-template-columns: repeat(20, 5%)
+
+
+#leftside
+    grid-area: 1/1/21/6
+
+#rightside
+    grid-area: 1/16/21/21
+
+#midmain
+    grid-area: 1/6/21/16
+    display: flex
+    flex-direction: column
+
+#nav
+    flex: 1 1 5%
+    display: flex
+
+#logo
+    flex: 1 1 20%
+    text-align: center
+
+#logo > img
+    width: 25%
+    height: auto
+
+#title
+    flex: 1 1 80%
+    margin-left: 5rem
+
+#appdisplay
+    font: 100% $Lato
+    flex: 1 1 95%
+
+
+
