More styling completed.

--- a/src/base.sass
+++ b/src/base.sass
@@ -3,9 +3,10 @@
 
 $Oswald: Oswald, sans-serif
 $Lato: Lato, sans-serif
+$font-size-base: 5vw
 
-$color1: #2a23af
-$color2: #1f30c3
-$color3: #d1f34c
-$color4: #b3d51d
-$color5: #efc346
+$color1: #043353
+$color2: #E44652
+$color3: #FAF8F0 
+$color4: #E4DFCF
+$color5: #847F59⁣
