--- a/src/styles.sass
+++ b/src/styles.sass
@@ -10,9 +10,9 @@ html, body, #pagecontainer
     height: 100%
 
 #pagecontainer
-    font: 100% $Oswald
+    font: $Oswald
     background-color: $color1
-    color: $color5
+    color: $color3
     display: grid
     grid-template-rows: repeat(20, 5%)
     grid-template-columns: repeat(20, 5%)
@@ -40,13 +40,20 @@ html, body, #pagecontainer
 #logo > img
     width: 25%
     height: auto
+    margin-left: -4rem
 
 #title
     flex: 1 1 80%
-    margin-left: 5rem
+    text-align: center
+    padding-left: 7rem
+
+#title > h1
+    font-size: 3rem
+    font-weight: bold
+    color: $color5
 
 #appdisplay
-    font: 100% $Lato
+    font: $Lato
     flex: 1 1 95%
 
 
