--- a/src/app/applicant-add-or-update/applicant-add-or-update.component.html
+++ b/src/app/applicant-add-or-update/applicant-add-or-update.component.html
@@ -17,6 +17,6 @@
             <label for="applicantLoanAmount">Applicant Loan Amount</label>
             <input type="text" id="applicantLoanAmount" name="applicantLoanAmount" [(ngModel)]="applicantDetails.loanAmount" class="form-control">
         </div>
-        <button type="button" class="btn btn-primary" (click)="addOrUpdateApplicant($event)" class="link">Save</button>
+        <button type="button" class="btn btn-primary" (click)="addOrUpdateApplicant($event)">Save</button>
     </form>
 </div>
