--- a/src/app/home/home.component.sass
+++ b/src/app/home/home.component.sass
@@ -5,6 +5,14 @@
     
 #applicantinput
     flex: 1 1 35%
+    display: flex
+    flex-direction: column
+    justify-content: flex-start
+    margin-top: 10rem
+    padding: 3rem
 
 #applicantdisplay
     flex: 1 1 65%
+    margin-top: 10rem
+    padding-left: 5rem
+    padding-top: 3rem
